# skriuwit

./: Cargo.toml  README.md  app.rs  justfile
i18n/en/: skriuwit.ftl
i18n/fy/: skriuwit.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs  styles.rs
src/components/: document_store.rs  mod.rs  search_engine.rs
src/models/: document.rs  document_store.rs  documentmanager.rs  mod.rs  tag.rs
