[package]
name = "skriuwit"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "document manager"
repository = "https://github.com/vancha/SkriuwIt"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
rfd = "0.13"
whoami = "1.2.0"
rusqlite = "0.31"
tokio = { version = "1.41.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]